<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VideoPlayer</string>
    <string name="folder">FOLDER</string>
    <string name="video">VIDEO</string>
    <string name="fileDeletedSuccessfully">File Deleted Successfully!</string>
    <string name="fileNotDeleted">File not deleted</string>
    <string name="share_image_via">Share File via...</string>
    <string name="no_app_installed">No application found to open this file.</string>
    <string name="play">Play</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_n_this_video">Are you sure you want to delete this Video?</string>
    <string name="cancle">CANCEL</string>
    <string name="r_rename">RENAME</string>
    <string name="d_delete">DELETE</string>
    <string name="enter_a_name">Enter name</string>
    <string name="please_enter_a_valid_text">Please enter a valid text</string>
    <string name="ok">OK</string>
    <string name="video_orientation_auto">Auto rotate</string>
    <string name="video_orientation_portrait">Portrait locked</string>
    <string name="video_orientation_landscape">Landscape locked</string>
    <string name="auto">Auto</string>
    <string name="videos">Videos</string>
    <string name="delete_this_video">Delete this video</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="press">Press back again for exit</string>
    <string name="select_language">Select Language</string>
    <string name="speed">Speed</string>
    <string name="video_player">Video Player</string>
    <string name="video_players">VIDEO PLAYER</string>
    <string name="ultra_high_definition_video_player">Ultra High-Definition Video Player</string>
    <string name="theme">Theme</string>
    <string name="choose_theme">Choose theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="system_default">System Default</string>
    <string name="player">PLAYER</string>
    <string name="please_allow">please allow permission to use features</string>
    <string name="allow">allow</string>
    <string name="successfull">SuccessFull!</string>
    <string name="video_not_supported">Video not Supported</string>
    <string name="selected">%d Selected</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="oldest">Oldest</string>
    <string name="newest">Newest</string>
    <string name="smallest">Smallest</string>
    <string name="largest">Largest</string>

    <string name="enter_a_new_password_txt">Enter a New Password</string>
    <string name="confirm_password_txt">Confirm Password</string>
    <string name="password_changed_txt">Password Changed</string>
    <string name="please_enter_a_new_password_again_txt">Please Enter a New Password Again</string>
    <string name="max_8_characters_txt">Max 4 characters</string>
    <string name="please_enter_current_password_txt">Please Enter Current Password</string>
    <string name="password_is_set_txt">Password is set</string>
    <string name="incorrect_password_txt">Incorrect Password</string>
    <string name="password_disabled_txt">Password Disabled</string>
    <string name="enter_your_password_txt">Enter Your Password</string>
    <string name="clear_txt">Clear</string>
    <string name="forgot_password_txt">Forgot password ?</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="hide_video">Hide Videos</string>
    <string name="show_video">Show Video</string>
    <string name="security_question">Security Question</string>
    <string name="what_is_your_name">What is your name ?</string>
    <string name="type_answer_here">Type answer here...</string>
    <string name="des_lock">Security question is used when you forget your password.</string>
    <string name="please_enter_your_4_digit_passcode">Please enter your 4 digit passcode</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="no_data_found">No Data Found</string>
    <string name="enter_password">Enter Password</string>
    <string name="please_enter_security_question">Please enter security question</string>
    <string name="change_password">Change Password</string>
    <string name="loading_ads">Loading ads...</string>
    <string name="next">Next</string>
    <string name="ads_dsc">This action might contain ads</string>
    <string name="details">Details</string>
    <string name="video_info">Video Info</string>
    <string name="file">File</string>
    <string name="location">Location</string>
    <string name="length">Length</string>
    <string name="size">Size</string>
    <string name="resolution">Resolution</string>
    <string name="date">Date</string>
    <string name="hide_desc">If you hide the video, it will be moved from its original directory. When you unhide the video, it will be recreated in the movies directory</string>
    <string name="hd_video_player">HD Video Player</string>
    <string name="all_format_hd_video_player">All Format HD Video Player</string>
    <string name="yes_exit">Yes, Exit</string>
    <string name="rate_app">Rate App</string>
    <string name="please_spare_a_moment_to_rate_and_give_your_valuable_feedback_to_us_before_leaving">Please spare a moment to rate and give your valuable feedback to us before leaving.</string>
    <string name="do_you_want_to_exit">Do you want to Exit?</string>
</resources>