<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearToolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:adjustViewBounds="true"
            android:src="@drawable/player_back" />

        <TextView
            android:id="@+id/txtShowVideoName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:fontFamily="@font/inter_semibold"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/security_question"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtWName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/what_is_your_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@id/linearToolBar" />

    <EditText
        android:id="@+id/edtQuestion"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/rename_border"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/type_answer_here"
        android:imeOptions="actionDone"
        android:paddingHorizontal="@dimen/_10sdp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/lock_s_color"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintTop_toBottomOf="@+id/txtWName" />

    <TextView
        android:id="@+id/txtSecurityDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/des_lock"
        android:textColor="@color/txt_color"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintTop_toBottomOf="@id/edtQuestion" />


    <TextView
        android:id="@+id/txtNext"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/rename_border"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSecurityDes" />

</androidx.constraintlayout.widget.ConstraintLayout>