<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:background="@color/ad_native_background"
    android:padding="@dimen/_5sdp">

    <TextView
        android:id="@+id/tvExitTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/do_you_want_to_exit"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvExitTextSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:text="@string/please_spare_a_moment_to_rate_and_give_your_valuable_feedback_to_us_before_leaving"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExitTextTitle" />

    <include
        android:id="@+id/native_ad_container"
        layout="@layout/ad_layout_native_big"
        android:layout_width="match_parent"
        android:layout_height="@dimen/native_ad_height"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tvExitTextSubTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvShare"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/txt_bg"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingHorizontal="@dimen/_55sdp"
        android:text="@string/rate_app"
        android:textColor="@color/exo_white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/native_ad_container" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvQuit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@color/ad_exit_button_background_exit"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingHorizontal="@dimen/_35sdp"
        android:text="@string/yes_exit"
        android:textColor="@color/txt_bg"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvShare" />

</androidx.constraintlayout.widget.ConstraintLayout>