<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/click_bg"
    android:padding="@dimen/_13sdp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                android:src="@drawable/list_player"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                android:src="@drawable/grid_player"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grid"
                android:textColor="@color/black"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                android:src="@drawable/ascending_player"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ascending"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearSortZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                android:src="@drawable/descending_player"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descending"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearDateOld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                android:src="@drawable/old_player"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oldest"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearDateNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                android:src="@drawable/new_player"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newest"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:textColor="@color/black"
                android:singleLine="true"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearSizeSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                android:src="@drawable/ssize_player"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smallest"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:textColor="@color/black"
                android:singleLine="true"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearSizeLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                android:src="@drawable/lsize_player"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/largest"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:textColor="@color/black"
                android:singleLine="true"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>