<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/click_bg"
    android:padding="@dimen/_13sdp">

    <TextView
        android:id="@+id/txtThemeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_weight="1"
        android:ellipsize="marquee"
        android:fontFamily="@font/inter_semibold"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/choose_theme"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_g"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtThemeName">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/light"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_13sdp"
                android:gravity="center_vertical"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/light_theme"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />


                <RadioButton
                    android:id="@+id/light_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@android:color/transparent"
                    android:button="@drawable/custom_radio"
                    android:gravity="center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_13sdp"
                android:layout_below="@id/custom"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/dark_theme"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />


                <RadioButton
                    android:id="@+id/dark_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@android:color/transparent"
                    android:button="@drawable/custom_radio"
                    android:gravity="center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/custom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_13sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/system_default"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />


                <RadioButton
                    android:id="@+id/custom_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_margin="@dimen/_5sdp"
                    android:button="@drawable/custom_radio"
                    android:gravity="center_vertical" />

            </LinearLayout>
        </LinearLayout>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_g">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:ellipsize="marquee"
            android:fontFamily="@font/inter_medium"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/cancle"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:ellipsize="marquee"
            android:fontFamily="@font/inter_medium"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/ok"
            android:textColor="@color/txt_bg"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>