<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/click_bg">

    <TextView
        android:id="@+id/rename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/rename"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/rename_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/rename_border"
        android:fontFamily="@font/inter_medium"
        android:hint="Video_player_25541545"
        android:inputType="text"
        android:paddingHorizontal="@dimen/_10sdp"
        android:singleLine="true"
        android:textColor="@color/txt_color"
        android:textColorHint="@color/txt_color"
        app:layout_constraintTop_toBottomOf="@+id/rename" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rename_et">

        <TextView
            android:id="@+id/rename_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:ellipsize="marquee"
            android:fontFamily="@font/inter_medium"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/cancle"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/rename_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:ellipsize="marquee"
            android:fontFamily="@font/inter_medium"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/r_rename"
            android:textColor="@color/txt_bg"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>